--- a/virtual_library/books/templates/books/search_result.html
+++ b/virtual_library/books/templates/books/search_result.html
@@ -1,32 +1,38 @@
 {% extends "base.html" %}
 
+{% block newlinks %}
+{% load static %}
+<link rel="stylesheet" href="{% static "books/css/search-result.css" %}">
+{% endblock newlinks %}
+
 {% block content %}
 
-    {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+{% if error_message %}
+    <p><strong>{{ error_message }}</strong></p>
+{% endif %}
 
-
-    {% if not books_and_authors %}
-
-        <p> 0 book found using "{{ keyword }}". </p>
-
+<div id="cart-books">
+    {% if not books %}
+        <h3> 0 book found using "{{ keyword }}". </h3>
     {% else %}
+        <h3>{{ books|length }} book found using "{{ keyword }}". </h3>
 
-        <p>{{ books_and_authors|length }} book found using "{{ keyword }}". </p>
-
-        <table id="search-results">
+        <table id="shopping_cart">
+            {% for book in books %}
             <tr>
-                <th>Title</th>
-                <th>Author</th>
-            </tr>
-
-            {% for i in books_and_authors %}
-            <tr>
-                <td><a href = "{% url 'books:get_info' i.0  %}">{{ i.1 }}</a></td>
-                <td>{% for j in i.2 %} {{ j }} {% endfor %}</td>
+                <td>{% include "books/book.html" with book_desc=book %}</td>
+                <td id="add-to-cart">
+                    <button class="btn" type="button">
+                        <a href="{% url 'online_shop:add_to_cart' book.id  %}">
+                            <i class="fas fa-cart-plus"></i>
+                        </a>
+                    </button> 
+                </td>
             </tr>
             {% endfor %}
         </table>
-
     {% endif %}
+</div>
+    
 
 {% endblock %}
