--- a/virtual_library/static/books/css/search-result.css
+++ b/virtual_library/static/books/css/search-result.css
@@ -1,21 +1,16 @@
-/*
-Array
-*/
-
-#main-index
+#cart-books h3
 {
-    width: 100%;
-    align-content: center;
+    text-align: center;
 }
 
-#discount-books table
+#cart-books table
 {
     width: 50%;
 	margin: auto;
     border-collapse: collapse;
 }
 
-#discount-books img
+#cart-books img
 {
     float: left;
     margin: 5px 10px;
@@ -23,18 +18,18 @@ Array
     width: 100px;
 }
 
-#discount-books button
+#cart-books button
 {
     margin: auto 5px;
 }
 
-#discount-books td, #discount-books th
+#cart-books td, #cart-books th
 {
     border: 1px solid #ddd;
     padding: 8px;
 }
 
-#discount-books th
+#cart-books th
 {
     padding-top: 12px;
 	padding-bottom: 12px;
@@ -46,9 +41,4 @@ Array
 #add-to-cart
 {
     text-align: center;
-}
-
-#books-buyprice
-{
-	padding-left: 125px;
 }
