--- a/virtual_library/static/css/styles.css
+++ b/virtual_library/static/css/styles.css
@@ -2,11 +2,11 @@
 Generic code
 */
 
-*
+/* *
 {
 	margin: 0;
     padding: 0;
-}
+} */
 
 html
 {
@@ -16,6 +16,7 @@ html
 
 body
 {
+	margin: 0px;
 	min-height: 92%;
 	padding-bottom: 3%;   /* Height of the footer */
 	font-size: 62.5%;
@@ -54,13 +55,18 @@ Navbar elements
 
 .navbar-element {
 	width: 100%;
-	margin-bottom: 4em;
-    padding: 0.5em;
+	/* margin-bottom: 4em;
+    padding: 0.5em;  */
     background-color: #333333;
 }
 
 .navbar-element ul {
-list-style: none;
+	width: 100%;
+	margin-bottom: 4em;
+	margin-top: 0px;
+    padding: 0.5em;
+	list-style: none;
+	height: 100%;
 }
 
 .navbar-element ul li {
@@ -96,11 +102,14 @@ Text Section
 
 .text-section
 {
-	padding: 0;
-	margin: 0 auto 20px auto;
-	width: 800px;
-    font-size: 1.2em;
-    text-align: center;
+	width: 100%;
+	font-size: 1.2em;
+	margin-bottom: 2%;
+}
+
+.text-section h1
+{
+	text-align: center;
 }
 
 
@@ -109,7 +118,6 @@ Text Section
 	font-size: 2em;
 	margin-bottom: 0.75em;
 }
-
 
 
 .text-section a
@@ -156,8 +164,8 @@ footer
 
 .footer
 {
-	position: absolute;
-	margin: 0 20% 0 20%;
+	position: relative;
+	margin: 5% 20% 0 20%;
 	width: 60%;
 	bottom: 1em;
 	border-top-color: rgb(255,255,255);
