--- a/virtual_library/main_site/templates/main_site/index.html
+++ b/virtual_library/main_site/templates/main_site/index.html
@@ -18,11 +18,13 @@
         <tr>
             <td>{% include "books/book.html" with book_desc=book %}</td>
             <td id="add-to-cart">
-                <button class="btn" type="button">
-                    <a href="{% url 'online_shop:add_to_cart' book.id  %}">
+                <form method="POST" action="{% url 'online_shop:add_to_cart' book.id  %}">
+                    {% csrf_token %}
+                    <input type="hidden" name="next" value="{{ request.path }}">
+                    <button class="btn" type="submit">
                         <i class="fas fa-cart-plus"></i>
-                    </a>
-                </button> 
+                    </button> 
+                </form>
             </td>
         </tr>
         {% endfor %}
