--- a/virtual_library/main_site/templates/main_site/signin_form.html
+++ b/virtual_library/main_site/templates/main_site/signin_form.html
@@ -2,11 +2,14 @@
 
 {% block content %}
 
+<div id="block-content">
     <form id="sign-in" action="" method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Sign in</button>
     </form>
+</div>
+    
 
 {% endblock %}
 
