--- a/virtual_library/main_site/templates/main_site/signup_form.html
+++ b/virtual_library/main_site/templates/main_site/signup_form.html
@@ -1,26 +1,27 @@
 {% extends "base.html" %}
 
 {% block content %}
- 
-<h1>Inscription</h1>
+
+<div id="block-content">
+    <h1>Inscription</h1>
     
-<form id="sign-up" action="" method="post">
-    {% csrf_token %}
-
-    {% for field in form %}
-      <p>
-        {{ field.label_tag }}<br>
-        {{ field }}
-        <!-- {% if field.help_text %}
-          <small style="color: grey">{{ field.help_text }}</small>
-        {% endif %} -->
-        {% for error in field.errors %}
-          <p style="color: red">{{ error }}</p>
+    <form id="sign-up" action="" method="post">
+        {% csrf_token %}
+    
+        {% for field in form %}
+          <p>
+            {{ field.label_tag }}<br>
+            {{ field }}
+            <!-- {% if field.help_text %}
+              <small style="color: grey">{{ field.help_text }}</small>
+            {% endif %} -->
+            {% for error in field.errors %}
+              <p style="color: red">{{ error }}</p>
+            {% endfor %}
+          </p>
         {% endfor %}
-      </p>
-    {% endfor %}
-    <button type="submit">Sign up</button>
-
-</form>
+        <button type="submit">Sign up</button>
+    </form>
+</div>
 
 {% endblock %}
