--- a/virtual_library/main_site/templates/main_site/signin_form.html
+++ b/virtual_library/main_site/templates/main_site/signin_form.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "main_site/base.html" %}
 
 {% block content %}
 
@@ -10,6 +10,5 @@
     </form>
 </div>
     
-
 {% endblock %}
 
