--- a/virtual_library/main_site/templates/main_site/user_profile.html
+++ b/virtual_library/main_site/templates/main_site/user_profile.html
@@ -1,12 +1,12 @@
-{% extends "base.html" %}
+{% extends "main_site/base.html" %}
 
 {% block content %}
 
-    {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
-    <p>{{ user.username }} </p>
-    <p>{{ user.email }}</p>
-    <p>{{ user.first_name }} </p>
-    <p>{{ user.last_name }} </p>
+<p>{{ user.username }} </p>
+<p>{{ user.email }}</p>
+<p>{{ user.first_name }} </p>
+<p>{{ user.last_name }} </p>
 
 {% endblock %}
