--- a/virtual_library/main_site/templates/main_site/base.html
+++ b/virtual_library/main_site/templates/main_site/base.html
@@ -13,7 +13,7 @@
 
 <body>
 	{% block navbar %}
-	{% include "base_navbar.html" %}
+	{% include "main_site/base_navbar.html" %}
 	{% endblock %}
 
 	<div class="text-section">
@@ -25,7 +25,7 @@
 	</div>
 
 	{% block footer %}
-	{% include "base_footer.html" %}
+	{% include "main_site/base_footer.html" %}
 	{% endblock %}
 </body>
 
