--- a/virtual_library/main_site/templates/main_site/base_navbar.html
+++ b/virtual_library/main_site/templates/main_site/base_navbar.html
@@ -10,7 +10,7 @@
             <a href="{% url 'main_site:index' %}"><i class="fas fa-book"></i> Virtual BookStore</a>
         </li>
 
-        <li id="navbar-search">{% include "search.html" %}</li>
+        <li id="navbar-search">{% include "books/search.html" %}</li>
 
         {% if not user.is_authenticated %}
         <li class="navbar-right">
