--- a/virtual_library/main_site/templates/main_site/signup_form.html
+++ b/virtual_library/main_site/templates/main_site/signup_form.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "main_site/base.html" %}
 
 {% block content %}
 
@@ -9,16 +9,16 @@
         {% csrf_token %}
     
         {% for field in form %}
-          <p>
-            {{ field.label_tag }}<br>
-            {{ field }}
-            <!-- {% if field.help_text %}
-              <small style="color: grey">{{ field.help_text }}</small>
-            {% endif %} -->
-            {% for error in field.errors %}
-              <p style="color: red">{{ error }}</p>
-            {% endfor %}
-          </p>
+		<p>
+			{{ field.label_tag }}<br>
+			{{ field }}
+			<!-- {% if field.help_text %}
+				<small style="color: grey">{{ field.help_text }}</small>
+			{% endif %} -->
+			{% for error in field.errors %}
+			<p style="color: red">{{ error }}</p>
+			{% endfor %}
+		</p>
         {% endfor %}
         <button type="submit">Sign up</button>
     </form>
