--- a/virtual_library/online_shop/templates/online_shop/sale_form.html
+++ b/virtual_library/online_shop/templates/online_shop/sale_form.html
@@ -1,21 +1,21 @@
-{% extends "base.html" %}
+{% extends "main_site/base.html" %}
 
 {% block content %}
 
-    {{ object.description_html|safe }}
+{{ object.description_html|safe }}
 
-    {% if error_message %}
-        <p><strong>{{ error_message }}</strong></p>
-    {% endif %}
+{% if error_message %}
+<p><strong>{{ error_message }}</strong></p>
+{% endif %}
 
-    <h2>Enter a string to register as a Sale</h2>
+<h2>Enter a string to register as a Sale</h2>
 
-    <form action="{% url 'online_shop:shop' %}" method="post">
-        {% csrf_token %}
-        <label for="string_to_look_for">item</label>
-        <input name="research" id="string_to_look_for" type="text">
-        <input type="submit" value="Buy">
-    </form>
+<form action="{% url 'online_shop:shop' %}" method="post">
+	{% csrf_token %}
+	<label for="string_to_look_for">item</label>
+	<input name="research" id="string_to_look_for" type="text">
+	<input type="submit" value="Buy">
+</form>
 
 {% endblock %}
 
